Fix: Add classes/css dec. blocks, justify content
I was checking to see how the website translates across different
browsers, and I noticed that MS Edge wraps my last gallery image element
to the next line. This is preferable to content breaking out, but I
needed to fix this!

First I went into index.html and added two divs with the class selector
"image-box" nested within "image-container", with two out of the four
"image-sub-container" divs nested within those.

I then added a css dec. block targeting the "image-box" selector and
changed the display to flex. I then added flex-wrap: nowrap. Now the
"image-sub-container"s will only break on to a new line in sets of two.

I then changed the justification of content from space-between to center
on the horizontal main axis, in the css dec. block targeting the
"image-container" class.

This fixed an issue where MS Edge, and potentially other more obscure
browsers wrap a single "image-sub-container" to a new line and causing
undesirable asymmetrical justification.

Now the elements wrap evenly in two sets of two, and they are now center
justified within the "body-container-one" flexbox and the overall page
layout.

--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,7 @@ h1 {
 
 .image-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -143,6 +143,11 @@ h1 {
     flex-direction: column;
     align-items: center;
     padding: 0px 18px;
+}
+
+.image-box {
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .body-container-two img {
